Fix flex direction column on mobile

--- a/utilities/_flex.scss
+++ b/utilities/_flex.scss
@@ -38,12 +38,14 @@
     @include align-items(center);
 }
 
+@media only screen and (max-width: $mobile-up) {
+    .direction-column--mob {
+        @include flex-direction(column);
+    }
+}
+
 @media only screen and (min-width: $mobile-up) {
     .align-center--mob {
         @include align-items(unset);
-    }
-    
-    .direction-column--mob {
-        @include flex-direction(column);
     }
 }
